SLING-12643 : Support Jakarta ServletAPI in Scripting (Initial support)